# Funding-Hub

./: .gitignore  Anchor.toml  Cargo.toml  DOCUMENTATION.md  README.md  deploy.bat  deploy.sh  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/admin/projects/: page.tsx
app/api/admin/projects/: route.ts
app/api/dao/: route.ts
app/api/governance/: route.ts
app/api/indexer/[...path]/: route.ts
app/api/portfolio/: route.ts
app/api/projects/: route.ts
app/api/projects/create/: route.ts
app/api/projects/pledge/: route.ts
app/api/projects/submit/: route.ts
app/api/relayer/: route.ts
app/api/savings/: route.ts
app/api/swap/execute/: route.ts
app/api/swap/quote/: route.ts
app/dao/: page.tsx
app/dao/create-proposal/: page.tsx
app/dao/deposit/: page.tsx
app/dashboard/: page.tsx
app/projects/create/: page.tsx
app/projects/submit/: page.tsx
app/savings/: page.tsx
app/swap/: page.tsx
components/: Portfolio.tsx  ProjectsGrid.tsx  ProposalList.tsx  Providers.tsx  WalletButton.tsx
docs/: DEVELOPMENT.md
idl/: dao_pass.json  funding_hub.json  governance.json  savings_vault.json
lib/: constants.ts  indexer.ts  portfolioAnalytics.ts  storage.ts  timeUtils.ts  transactions.ts  useDao.ts  useGovernance.ts  usePortfolio.ts  useProjects.ts  useSavings.ts
programs/dao_pass/: Cargo.toml
programs/dao_pass/src/: lib.rs
programs/funding_hub/: Cargo.toml
programs/funding_hub/src/: lib.rs
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/savings_vault/: Cargo.toml
programs/savings_vault/src/: lib.rs
serverless/indexer/: README.md  package.json  wrangler.toml
serverless/indexer/src/: index.ts
serverless/relayer/: README.md  package.json  wrangler.toml
serverless/relayer/src/: index.ts
tests/: funding_hub.js
