[package]
name = "dao_pass"
version = "0.1.0"
description = "DAO membership NFT and sponsor treasury program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_pass"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
