[package]
name = "funding_hub"
version = "0.1.0"
description = "Solana crowdfunding hub with donation tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funding_hub"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
mpl-token-metadata = { workspace = true }
