[package]
name = "savings_vault"
version = "0.1.0"
description = "Time-locked savings vaults with reward streaming"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "savings_vault"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
